packages/flow-type-tests/__tests__/fixtures/fixture-with-wrapper-typed.0.116.1.txt
Error ------------------------------------------- packages/flow-type-tests/__tests__/fixtures/with-wrapper-typed.js:20:1

Cannot create `Bar` element because property `bar` is missing in props [1] but exists in props [2].

   packages/flow-type-tests/__tests__/fixtures/with-wrapper-typed.js:20:1
   20| <Bar />; // missing foo and bar
       ^^^^^^^ [1]

References:
   packages/flow-type-tests/__tests__/fixtures/with-wrapper-typed.js:14:9
   14|         <StyledComponent {...props} />
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ------------------------------------------- packages/flow-type-tests/__tests__/fixtures/with-wrapper-typed.js:23:1

Cannot create `Bar` element because property `bar` is missing in props [1] but exists in props [2].

   packages/flow-type-tests/__tests__/fixtures/with-wrapper-typed.js:23:1
   23| <Bar foo="foo" />; // missing bar
       ^^^^^^^^^^^^^^^^^ [1]

References:
   packages/flow-type-tests/__tests__/fixtures/with-wrapper-typed.js:14:9
   14|         <StyledComponent {...props} />
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ------------------------------------------- packages/flow-type-tests/__tests__/fixtures/with-wrapper-typed.js:26:1

Cannot create `Bar` element because property `foo` is missing in props [1] but exists in props [2].

   packages/flow-type-tests/__tests__/fixtures/with-wrapper-typed.js:26:1
   26| <Bar bar="bar" />; // missing foo
       ^^^^^^^^^^^^^^^^^ [1]

References:
   packages/flow-type-tests/__tests__/fixtures/with-wrapper-typed.js:14:9
   14|         <StyledComponent {...props} />
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ------------------------------------------- packages/flow-type-tests/__tests__/fixtures/with-wrapper-typed.js:35:1

Cannot create `Baz` element because property `foo` is missing in props [1] but exists in props [2].

   packages/flow-type-tests/__tests__/fixtures/with-wrapper-typed.js:35:1
   35| <Baz bar="bar" baz="baz" />; // Missing foo
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]

References:
   packages/flow-type-tests/__tests__/fixtures/with-wrapper-typed.js:14:9
   14|         <StyledComponent {...props} />
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ------------------------------------------- packages/flow-type-tests/__tests__/fixtures/with-wrapper-typed.js:37:1

Cannot create `Baz` element because string [1] is incompatible with string literal `foo` [2] in property `foo`.

   packages/flow-type-tests/__tests__/fixtures/with-wrapper-typed.js:37:1
   37| <Baz foo="notfoo" bar="bar" baz="baz" />; // Wrong foo
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   packages/flow-type-tests/__tests__/fixtures/with-wrapper-typed.js:37:10
   37| <Baz foo="notfoo" bar="bar" baz="baz" />; // Wrong foo
                ^^^^^^^^ [1]
   packages/flow-type-tests/__tests__/fixtures/with-wrapper-typed.js:6:41
    6| const Foo = styled("div", (props: {foo: "foo"}) => ({
                                               ^^^^^ [2]


Error ------------------------------------------- packages/flow-type-tests/__tests__/fixtures/with-wrapper-typed.js:39:1

Cannot create `Baz` element because property `bar` (did you mean `baz`?) is missing in props [1] but exists in
props [2].

   packages/flow-type-tests/__tests__/fixtures/with-wrapper-typed.js:39:1
   39| <Baz foo="foo" baz="baz" />; // Missing bar
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]

References:
   packages/flow-type-tests/__tests__/fixtures/with-wrapper-typed.js:14:9
   14|         <StyledComponent {...props} />
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ------------------------------------------- packages/flow-type-tests/__tests__/fixtures/with-wrapper-typed.js:41:1

Cannot create `Baz` element because string [1] is incompatible with string literal `bar` [2] in property `bar`.

   packages/flow-type-tests/__tests__/fixtures/with-wrapper-typed.js:41:1
   41| <Baz foo="foo" bar="notbar" baz="baz" />; // Wrong bar
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   packages/flow-type-tests/__tests__/fixtures/with-wrapper-typed.js:41:20
   41| <Baz foo="foo" bar="notbar" baz="baz" />; // Wrong bar
                          ^^^^^^^^ [1]
   packages/flow-type-tests/__tests__/fixtures/with-wrapper-typed.js:11:48
   11|   StyledComponent => (props: {foo: "foo", bar: "bar"}) =>
                                                      ^^^^^ [2]


Error ------------------------------------------- packages/flow-type-tests/__tests__/fixtures/with-wrapper-typed.js:43:1

Cannot create `Baz` element because property `baz` (did you mean `bar`?) is missing in props [1] but exists in object
type [2].

   packages/flow-type-tests/__tests__/fixtures/with-wrapper-typed.js:43:1
   43| <Baz foo="foo" bar="bar" />; // Missing baz
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]

References:
   packages/flow-type-tests/__tests__/fixtures/with-wrapper-typed.js:30:36
   30| const Baz = withStyle(Bar, (props: {foo: "foo", bar: "bar", baz: "baz"}) => ({
                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ------------------------------------------- packages/flow-type-tests/__tests__/fixtures/with-wrapper-typed.js:45:1

Cannot create `Baz` element because string [1] is incompatible with string literal `baz` [2] in property `baz`.

   packages/flow-type-tests/__tests__/fixtures/with-wrapper-typed.js:45:1
   45| <Baz foo="foo" bar="bar" baz="notbaz" />; // Wrong baz
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   packages/flow-type-tests/__tests__/fixtures/with-wrapper-typed.js:45:30
   45| <Baz foo="foo" bar="bar" baz="notbaz" />; // Wrong baz
                                    ^^^^^^^^ [1]
   packages/flow-type-tests/__tests__/fixtures/with-wrapper-typed.js:30:66
   30| const Baz = withStyle(Bar, (props: {foo: "foo", bar: "bar", baz: "baz"}) => ({
                                                                        ^^^^^ [2]



Found 9 errors

Only showing the most relevant union/intersection branches.
To see all branches, re-run Flow with --show-all-branches
